--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
 - conda-forge
 dependencies:
 - pip=9.0.1
-- python=3.5.4
+- python=3.6.0
 - opencv=3.3.0
 - pip:
   - cycler==0.10.0
@@ -12,6 +12,7 @@ dependencies:
   - jupyter==1.0.0
   - matplotlib==2.1.2
   - networkx==2.0
+  - numpy==1.13.0
   - opencv-python==3.4.2.17
   - pandas==0.23.4
   - pillow==5.0.0
@@ -20,9 +21,9 @@ dependencies:
   - pytz==2017.3
   - pywavelets==0.5.2
   - pyyaml==3.12
-  - scikit-image==0.13.1
-  - scikit-learn==0.19.1
-  - scipy==1.0.0
+  - scikit-image==0.13.0
+  - scikit-learn==0.18.1
+  - scipy==0.19.1
   - seaborn==0.9.0
   - six==1.11.0
 
